--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: Myproject22_development
+  database: Rilla
   pool: 5
   timeout: 5000
   username: serg
@@ -14,14 +14,14 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: postgresql
-  encoding: unicode
-  database: Myproject22_test
-  pool: 5
-  timeout: 5000
-  username: serg
-  password: sp123456
-# production:
+# test:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: Mypr
+#   pool: 5
+#   timeout: 5000
+#   username: serg
+#   password: sp123456
+# # production:
 #   <<: *default
 #   database: db/production.sqlite3
